@@ -9,6 +9,8 @@ Changes in synthPop version 0.1.9
   * dataObj-methods for meanWt() and varWt()
   * method addWeights<- to modify sampling weights based on output from calibSample()
   * dataObj-method for quantileWt()
+  * updated default parameters for calibPop(). Previous choices for starting temperature were much to high and too many worse solution were accepted.
+  * fixed example for calibPop()
 
 Changes in synthPop version 0.1.8
   * remove S3-class spBwplot() -> only default method was implemented. Removed option to supply a list of populations; rewritten to use 'synthPopObj'-objects
